--- a/index.html
+++ b/index.html
@@ -5,90 +5,42 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Relatório Semanal - Semana 30 - PFC</title>
-        <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css"/>
+        <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/jquery.dataTables.css"/>
         <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
         <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.js"></script>
         <style>
-            body {
-                font-family: Arial, sans-serif;
-                background-color: #f4f4f4;
-                margin: 0;
-                padding: 0;
-            }
-            header {
-                background-color: #003366;
-                color: white;
-                padding: 20px;
-                text-align: center;
-            }
-            nav {
-                background: #0059b3;
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-            nav a {
-                color: white;
-                padding: 15px 20px;
-                text-decoration: none;
-            }
-            nav a:hover {
-                background: #004080;
-            }
-            section {
-                background: white;
-                margin: 20px;
-                padding: 20px;
-                border-radius: 10px;
-                box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-            }
-            iframe {
-                width: 100%;
-                height: 600px;
-                border: none;
-            }
-            .cards {
-                display: flex;
-                flex-wrap: wrap;
-                justify-content: space-around;
-            }
-            .card {
-                background-color: white;
-                border-radius: 10px;
-                box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);
-                margin: 10px;
-                padding: 20px;
-                flex: 1 1 220px;
-                max-width: 250px;
-                text-align: center;
-            }
+            body { font-family: Arial; background: #f4f4f4; margin: 0; padding: 0; }
+            header { background: #003366; color: white; padding: 20px; text-align: center; }
+            nav { background: #0059b3; display: flex; flex-wrap: wrap; justify-content: center; }
+            nav a { color: white; padding: 15px 20px; text-decoration: none; }
+            nav a:hover { background: #004080; }
+            section { background: white; margin: 20px; padding: 20px; border-radius: 10px; box-shadow: 0 2px 4px rgba(0,0,0,0.1); }
+            iframe { width: 100%; height: 600px; border: none; }
+            .cards { display: flex; flex-wrap: wrap; justify-content: space-around; }
+            .card { background: white; border-radius: 10px; box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1); margin: 10px; padding: 20px; flex: 1 1 220px; max-width: 250px; text-align: center; }
             .card h3 { color: #003366; }
             .card p { font-size: 24px; font-weight: bold; }
-            h2 {
-                color: #003366;
-                border-bottom: 2px solid #003366;
-                padding-bottom: 10px;
-            }
-            table.dataTable thead th {
-                background-color: #003366;
-                color: white;
-            }
+            h2 { color: #003366; border-bottom: 2px solid #003366; padding-bottom: 10px; }
+            table.dataTable thead th { background-color: #003366; color: white; }
         </style>
     </head>
     <body>
 
     <header>
-        <h1>Relatório Semanal - Semana 30 (2025/07/24)</h1>
+        <h1>Relatório Semanal - Semana 30 (2025/07/25)</h1>
         <p>Programa Futuro Cientista</p>
     </header>
 
     <nav>
         <a href="#geral">📈 Evasão Geral</a>
-        <a href="#top_alunos">📊 Top Alunos</a>
-        <a href="#evasao_cidade">🏙️ Evasão por Cidade</a>
-        <a href="#evasao_turma">🏫 Evasão por Turma</a>
-        <a href="#risco_cidade">⚠️ Risco por Cidade</a>
-        <a href="#mapa_cidades">🗺️ Mapa</a>
+        <a href="#tabela_evasao_turma">🏫 Evasão por Turma</a>
+        <a href="#tabela_evasao_cidade">🏙️ Evasão por Cidade</a>
+        <a href="#tabela_evasao_supervisor">🧑‍🏫 Evasão por Supervisor</a>
+        <a href="#tabela_top_alunos">🚨 Top Alunos com Risco</a>
+        <a href="#grafico_top_alunos">📊 Gráfico: Top Alunos</a>
+        <a href="#grafico_risco_cidade">⚠️ Risco por Cidade</a>
+        <a href="#grafico_evasao_cidade">🏙️ Gráfico: Evasão por Cidade</a>
+        <a href="#grafico_evasao_turma">🏫 Gráfico: Evasão por Turma</a>
     </nav>
 
     <section id="geral">
@@ -105,18 +57,18 @@
         </div>
     </section>
 
-    <section id="tabela_evasao_turma">
-        <h2>🏫 Tabela: Evasão por Turma</h2>
-        <table border="1" class="dataframe tabela-interativa" id="evasaoTurma">
+    <section id="tabela_evasao_turma"><h2>🏫 Tabela: Evasão por Turma</h2><table border="1" class="dataframe tabela-interativa" id="evasaoTurma">
   <thead>
     <tr style="text-align: right;">
       <th></th>
-      <th>desligados</th>
       <th>ativos</th>
-      <th>% evasão sobre ativos</th>
+      <th>desligados</th>
+      <th>Vagas disponíveis</th>
+      <th>probabilidade de desligamento</th>
     </tr>
     <tr>
       <th>turma</th>
+      <th></th>
       <th></th>
       <th></th>
       <th></th>
@@ -125,268 +77,434 @@
   <tbody>
     <tr>
       <th>CEMUS1 - Turma A</th>
-      <td>2</td>
       <td>14</td>
-      <td>14.3</td>
+      <td>2</td>
+      <td>6</td>
+      <td>0.0850</td>
     </tr>
     <tr>
       <th>CEMUS1 - Turma B</th>
-      <td>0</td>
       <td>11</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>9</td>
+      <td>0.0300</td>
     </tr>
     <tr>
       <th>CEMUS5 - Turma A</th>
-      <td>1</td>
       <td>19</td>
-      <td>5.3</td>
+      <td>1</td>
+      <td>1</td>
+      <td>0.0460</td>
     </tr>
     <tr>
       <th>CEMUS5 - Turma B</th>
-      <td>0</td>
       <td>18</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>2</td>
+      <td>0.0283</td>
     </tr>
     <tr>
       <th>E. M. Francisco Adolfo de Varnhagen</th>
+      <td>10</td>
       <td>0</td>
       <td>10</td>
-      <td>0.0</td>
+      <td>0.0390</td>
     </tr>
     <tr>
       <th>E. M. Pedrina de Campos Pedrozo Rosa</th>
-      <td>0</td>
       <td>14</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>6</td>
+      <td>0.0607</td>
     </tr>
     <tr>
       <th>E. M. Roque Ayres de Oliveiras</th>
-      <td>0</td>
       <td>15</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>5</td>
+      <td>0.0073</td>
     </tr>
     <tr>
       <th>E. M. Zilma Thibes Melo</th>
-      <td>0</td>
       <td>22</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>-2</td>
+      <td>0.0141</td>
     </tr>
     <tr>
       <th>E.M. Dra. Glaucia Aparecida Andrade Nogueira</th>
-      <td>0</td>
       <td>18</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>2</td>
+      <td>0.0061</td>
     </tr>
     <tr>
       <th>E.M. Elisa Moreira dos Santos</th>
-      <td>1</td>
       <td>18</td>
-      <td>5.6</td>
+      <td>1</td>
+      <td>2</td>
+      <td>0.0584</td>
     </tr>
     <tr>
       <th>E.M. Francisco Munhoz</th>
-      <td>1</td>
       <td>15</td>
-      <td>6.7</td>
+      <td>1</td>
+      <td>5</td>
+      <td>0.0375</td>
     </tr>
     <tr>
       <th>E.M. Franciso Mariano</th>
-      <td>0</td>
       <td>19</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0.0216</td>
     </tr>
     <tr>
       <th>E.M. Henory de Campos Goes</th>
-      <td>2</td>
       <td>3</td>
-      <td>66.7</td>
+      <td>2</td>
+      <td>17</td>
+      <td>0.2140</td>
     </tr>
     <tr>
       <th>E.M. Joaquim Salvador</th>
-      <td>2</td>
       <td>18</td>
-      <td>11.1</td>
+      <td>2</td>
+      <td>2</td>
+      <td>0.1025</td>
     </tr>
     <tr>
       <th>E.M. Marcilio Leite- Turma A</th>
-      <td>2</td>
       <td>13</td>
-      <td>15.4</td>
+      <td>2</td>
+      <td>7</td>
+      <td>0.0547</td>
     </tr>
     <tr>
       <th>E.M. Marcilio Leite- Turma B</th>
-      <td>1</td>
       <td>14</td>
-      <td>7.1</td>
+      <td>1</td>
+      <td>6</td>
+      <td>0.0760</td>
     </tr>
     <tr>
       <th>E.M. Ricardo Pucetti</th>
-      <td>0</td>
       <td>19</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0.0021</td>
     </tr>
     <tr>
       <th>EE Coronel Castanho de Almeida</th>
-      <td>0</td>
       <td>13</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>7</td>
+      <td>0.0300</td>
     </tr>
     <tr>
       <th>EE Prof. Antonio Tonon - Turma A</th>
-      <td>0</td>
       <td>19</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0.0237</td>
     </tr>
     <tr>
       <th>EM Carmen Lucia Blanco Britto</th>
-      <td>1</td>
       <td>12</td>
-      <td>8.3</td>
+      <td>1</td>
+      <td>8</td>
+      <td>0.0554</td>
     </tr>
     <tr>
       <th>EM Henory de Campos Goes</th>
-      <td>0</td>
       <td>5</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>15</td>
+      <td>0.0160</td>
     </tr>
     <tr>
       <th>EMEF Barão de Piratininga - Turma A</th>
-      <td>0</td>
       <td>20</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0.0135</td>
     </tr>
     <tr>
       <th>EMEF Barão de Piratininga - Turma B</th>
-      <td>0</td>
       <td>23</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>-3</td>
+      <td>0.0204</td>
     </tr>
     <tr>
       <th>EMEF Dr. Rabindranath Tagore dos S. Pires</th>
-      <td>0</td>
       <td>13</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>7</td>
+      <td>0.0077</td>
     </tr>
     <tr>
       <th>EMEF Leonidas Antonio de Moreas Professor</th>
-      <td>1</td>
       <td>20</td>
-      <td>5.0</td>
+      <td>1</td>
+      <td>0</td>
+      <td>0.0390</td>
     </tr>
     <tr>
       <th>EMEF Prof. Darcy Amáncio</th>
-      <td>2</td>
       <td>19</td>
-      <td>10.5</td>
+      <td>2</td>
+      <td>1</td>
+      <td>0.0862</td>
     </tr>
     <tr>
       <th>EMEF Prof. Euclides de Oliveira</th>
-      <td>0</td>
       <td>18</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>2</td>
+      <td>0.0061</td>
     </tr>
     <tr>
       <th>EMEF Prof. Joao Alcindo Vieira</th>
-      <td>4</td>
       <td>20</td>
-      <td>20.0</td>
+      <td>4</td>
+      <td>0</td>
+      <td>0.0967</td>
     </tr>
     <tr>
       <th>EMEF Prof. Joaquim Silveira Santos</th>
-      <td>2</td>
       <td>12</td>
-      <td>16.7</td>
+      <td>2</td>
+      <td>8</td>
+      <td>0.1507</td>
     </tr>
     <tr>
       <th>EMEF Prof. Tiberio Justo da Silva</th>
-      <td>0</td>
       <td>20</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0.0080</td>
     </tr>
     <tr>
       <th>EMEF Prof. Wilson Paschoal</th>
-      <td>0</td>
       <td>18</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>2</td>
+      <td>0.0117</td>
     </tr>
     <tr>
       <th>EMEF Profa. Maria de Lourdes Pedroso Perin</th>
-      <td>6</td>
       <td>14</td>
-      <td>42.9</td>
+      <td>6</td>
+      <td>6</td>
+      <td>0.1510</td>
     </tr>
     <tr>
       <th>EMEF Professor Antonio Cavaglieri</th>
-      <td>0</td>
       <td>16</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>4</td>
+      <td>0.0075</td>
     </tr>
     <tr>
       <th>EMEF Sonia Maria Abreu Ghilardi</th>
-      <td>0</td>
       <td>11</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>9</td>
+      <td>0.0191</td>
     </tr>
     <tr>
       <th>EMEF Tetsu Chinone</th>
-      <td>0</td>
       <td>13</td>
-      <td>0.0</td>
+      <td>0</td>
+      <td>7</td>
+      <td>0.0292</td>
     </tr>
   </tbody>
-</table>
-    </section>
-
-    <section id="tabela_evasao_cidade">
-        <h2>🏙️ Tabela: Evasão por Cidade</h2>
-        <table border="1" class="dataframe tabela-interativa" id="evasaoCidade">
+</table></section>
+    <section id="tabela_evasao_cidade"><h2>🏙️ Tabela: Evasão por Cidade</h2><table border="1" class="dataframe tabela-interativa" id="evasaoCidade">
   <thead>
     <tr style="text-align: right;">
       <th></th>
+      <th>ativos</th>
       <th>desligados</th>
+      <th>Vagas disponíveis</th>
+      <th>probabilidade de desligamento</th>
     </tr>
     <tr>
       <th>cidade</th>
+      <th></th>
+      <th></th>
+      <th></th>
       <th></th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th>Capela do Alto-SP</th>
+      <td>98</td>
       <td>6</td>
+      <td>22</td>
+      <td>0.0487</td>
+    </tr>
+    <tr>
+      <th>Coronel Macedo-SP</th>
+      <td>19</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0.0237</td>
     </tr>
     <tr>
       <th>Corumbataí-SP</th>
+      <td>14</td>
       <td>6</td>
+      <td>6</td>
+      <td>0.1510</td>
     </tr>
     <tr>
       <th>Guareí-SP</th>
+      <td>33</td>
       <td>4</td>
-    </tr>
-    <tr>
-      <th>São Roque-SP</th>
-      <td>4</td>
+      <td>7</td>
+      <td>0.0732</td>
     </tr>
     <tr>
       <th>Iperó-SP</th>
+      <td>105</td>
       <td>3</td>
-    </tr>
-    <tr>
-      <th>Salto-SP</th>
-      <td>3</td>
+      <td>55</td>
+      <td>0.0373</td>
     </tr>
     <tr>
       <th>Mirassol-SP</th>
+      <td>37</td>
       <td>2</td>
+      <td>3</td>
+      <td>0.0518</td>
+    </tr>
+    <tr>
+      <th>Salto-SP</th>
+      <td>62</td>
+      <td>3</td>
+      <td>18</td>
+      <td>0.0480</td>
+    </tr>
+    <tr>
+      <th>São Roque-SP</th>
+      <td>178</td>
+      <td>4</td>
+      <td>42</td>
+      <td>0.0301</td>
     </tr>
   </tbody>
-</table>
-    </section>
-
-    <section id="tabela_top_alunos"><h2>🚨 Tabela: Top Alunos com Risco</h2><table border="1" class="dataframe tabela-interativa" id="topAlunos">
+</table></section>
+    <section id="tabela_evasao_supervisor"><h2>🧑‍🏫 Tabela: Evasão por Supervisor</h2><table border="1" class="dataframe tabela-interativa" id="evasaoSupervisor">
   <thead>
     <tr style="text-align: right;">
       <th></th>
+      <th>ativos</th>
+      <th>desligados</th>
+      <th>Vagas disponíveis</th>
+      <th>probabilidade de desligamento</th>
+    </tr>
+    <tr>
+      <th>supervisor</th>
+      <th></th>
+      <th></th>
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <th>Ana Clara Ferrari</th>
+      <td>63</td>
+      <td>1</td>
+      <td>17</td>
+      <td>0.0170</td>
+    </tr>
+    <tr>
+      <th>Emilly Vitoria Alves Ribeiro</th>
+      <td>62</td>
+      <td>3</td>
+      <td>38</td>
+      <td>0.0526</td>
+    </tr>
+    <tr>
+      <th>Gustavo Eduardo Cardoso</th>
+      <td>19</td>
+      <td>0</td>
+      <td>1</td>
+      <td>0.0237</td>
+    </tr>
+    <tr>
+      <th>Jamilli Veloso de Souza</th>
+      <td>43</td>
+      <td>0</td>
+      <td>17</td>
+      <td>0.0142</td>
+    </tr>
+    <tr>
+      <th>Jose (Vinicius Lima Cardozo)</th>
+      <td>33</td>
+      <td>4</td>
+      <td>7</td>
+      <td>0.0732</td>
+    </tr>
+    <tr>
+      <th>Julia Fernanda de Camargo Teles Miranda</th>
+      <td>51</td>
+      <td>2</td>
+      <td>9</td>
+      <td>0.0240</td>
+    </tr>
+    <tr>
+      <th>Lívia Kormann</th>
+      <td>62</td>
+      <td>3</td>
+      <td>18</td>
+      <td>0.0480</td>
+    </tr>
+    <tr>
+      <th>Mirela Silva Gondim Garcia</th>
+      <td>74</td>
+      <td>1</td>
+      <td>6</td>
+      <td>0.0236</td>
+    </tr>
+    <tr>
+      <th>Paulo Miranda</th>
+      <td>47</td>
+      <td>4</td>
+      <td>13</td>
+      <td>0.0743</td>
+    </tr>
+    <tr>
+      <th>Pedro Henrique Prado Alves</th>
+      <td>14</td>
+      <td>6</td>
+      <td>6</td>
+      <td>0.1510</td>
+    </tr>
+    <tr>
+      <th>Synara Sajonetti Maistrello</th>
+      <td>37</td>
+      <td>2</td>
+      <td>3</td>
+      <td>0.0518</td>
+    </tr>
+    <tr>
+      <th>Vittoria Christina Santos Rocha</th>
+      <td>41</td>
+      <td>2</td>
+      <td>19</td>
+      <td>0.0607</td>
+    </tr>
+  </tbody>
+</table></section>
+    <section id="tabela_top_alunos"><h2>🚨 Tabela: Top Alunos com Risco</h2><table border="1" class="dataframe tabela-interativa" id="topAlunos">
+  <thead>
+    <tr style="text-align: right;">
       <th>aluno</th>
       <th>turma</th>
       <th>cidade</th>
@@ -395,70 +513,60 @@
   </thead>
   <tbody>
     <tr>
-      <th>81</th>
       <td>Leo</td>
       <td>E. M. Pedrina de Campos Pedrozo Rosa</td>
       <td>Iperó-SP</td>
       <td>0.34</td>
     </tr>
     <tr>
-      <th>63</th>
       <td>Christyan Araújo de moura</td>
       <td>E. M. Francisco Adolfo de Varnhagen</td>
       <td>Iperó-SP</td>
       <td>0.29</td>
     </tr>
     <tr>
-      <th>433</th>
       <td>Lorena Margoni Zati</td>
       <td>EMEF Prof. Darcy Amáncio</td>
       <td>Mirassol-SP</td>
       <td>0.28</td>
     </tr>
     <tr>
-      <th>73</th>
       <td>Felipe</td>
       <td>E. M. Pedrina de Campos Pedrozo Rosa</td>
       <td>Iperó-SP</td>
       <td>0.22</td>
     </tr>
     <tr>
-      <th>198</th>
       <td>JENNIFER VITÓRIA DA SILVA</td>
       <td>E.M. Joaquim Salvador</td>
       <td>Capela do Alto-SP</td>
       <td>0.22</td>
     </tr>
     <tr>
-      <th>421</th>
       <td>Miguel Domingos Ferreira</td>
       <td>EMEF Barão de Piratininga - Turma B</td>
       <td>São Roque-SP</td>
       <td>0.21</td>
     </tr>
     <tr>
-      <th>195</th>
       <td>BRYAN CANDIDO RODRIGUÊS</td>
       <td>E.M. Henory de Campos Goes</td>
       <td>Iperó-SP</td>
       <td>0.21</td>
     </tr>
     <tr>
-      <th>280</th>
       <td>YANE CELINA SIMÃO</td>
       <td>EE Prof. Antonio Tonon - Turma A</td>
       <td>Coronel Macedo-SP</td>
       <td>0.19</td>
     </tr>
     <tr>
-      <th>15</th>
       <td>Aline da Silva de Lima</td>
       <td>CEMUS1 - Turma B</td>
       <td>Salto-SP</td>
       <td>0.18</td>
     </tr>
     <tr>
-      <th>229</th>
       <td>BEATRIZ MACHADO SOARES</td>
       <td>E.M. Marcilio Leite- Turma B</td>
       <td>Capela do Alto-SP</td>
@@ -466,12 +574,10 @@
     </tr>
   </tbody>
 </table></section>
-
-    <section id="top_alunos"><h2>📊 Top Alunos</h2><iframe src="grafico_top_alunos.html"></iframe></section>
-    <section id="evasao_cidade"><h2>🏙️ Evasão por Cidade</h2><iframe src="grafico_evasao_cidade.html"></iframe></section>
-    <section id="evasao_turma"><h2>🏫 Evasão por Turma</h2><iframe src="grafico_evasao_turma.html"></iframe></section>
-    <section id="risco_cidade"><h2>⚠️ Risco por Cidade</h2><iframe src="grafico_risco_cidade.html"></iframe></section>
-    <section id="mapa_cidades"><h2>🗺️ Mapa</h2><iframe src="grafico_mapa_cidades.html"></iframe></section>
+    <section id="grafico_top_alunos"><h2>📊 Gráfico: Top Alunos</h2><iframe src="grafico_top_alunos.html"></iframe></section>
+    <section id="grafico_risco_cidade"><h2>⚠️ Risco por Cidade</h2><iframe src="grafico_risco_cidade.html"></iframe></section>
+    <section id="grafico_evasao_cidade"><h2>🏙️ Evasão por Cidade</h2><iframe src="grafico_evasao_cidade.html"></iframe></section>
+    <section id="grafico_evasao_turma"><h2>🏫 Evasão por Turma</h2><iframe src="grafico_evasao_turma.html"></iframe></section>
 
     <script>
         $(document).ready(function () {
