--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
     <section id="geral">
         <h2>📈 Evasão Geral</h2>
         <div class="cards">
-            <div class="card"><h3>Total de Turmas</h3><p>35</p></div>
+            <div class="card"><h3>Total de Turmas</h3><p>36</p></div>
             <div class="card"><h3>Total de Cidades</h3><p>8</p></div>
             <div class="card"><h3>Total de Supervisores</h3><p>12</p></div>
-            <div class="card"><h3>Alunos Esperados</h3><p>700</p></div>
-            <div class="card"><h3>Vagas Não Preenchidas</h3><p>126</p></div>
-            <div class="card"><h3>Ativos</h3><p>546</p></div>
+            <div class="card"><h3>Alunos Esperados</h3><p>720</p></div>
+            <div class="card"><h3>Vagas Não Preenchidas</h3><p>56</p></div>
+            <div class="card"><h3>Ativos</h3><p>636</p></div>
             <div class="card"><h3>Desligados</h3><p>28</p></div>
-            <div class="card"><h3>Total Evasão</h3><p>28</p></div>
+            <div class="card"><h3>Total Evasão</h3><p>7.8%</p></div>
         </div>
     </section>
 
@@ -61,6 +61,7 @@
   <thead>
     <tr style="text-align: right;">
       <th></th>
+      <th>cidade</th>
       <th>ativos</th>
       <th>desligados</th>
       <th>Vagas disponíveis</th>
@@ -72,253 +73,297 @@
       <th></th>
       <th></th>
       <th></th>
+      <th></th>
     </tr>
   </thead>
   <tbody>
     <tr>
       <th>CEMUS1 - Turma A</th>
-      <td>14</td>
+      <td>Salto-SP</td>
+      <td>16</td>
       <td>2</td>
-      <td>6</td>
-      <td>0.0850</td>
+      <td>4</td>
+      <td>8.0%</td>
     </tr>
     <tr>
       <th>CEMUS1 - Turma B</th>
-      <td>11</td>
+      <td>Salto-SP</td>
+      <td>13</td>
       <td>0</td>
-      <td>9</td>
-      <td>0.0300</td>
+      <td>7</td>
+      <td>1.4%</td>
     </tr>
     <tr>
       <th>CEMUS5 - Turma A</th>
-      <td>19</td>
+      <td>Salto-SP</td>
+      <td>21</td>
       <td>1</td>
-      <td>1</td>
-      <td>0.0460</td>
+      <td>-1</td>
+      <td>4.0%</td>
     </tr>
     <tr>
       <th>CEMUS5 - Turma B</th>
-      <td>18</td>
+      <td>Salto-SP</td>
+      <td>20</td>
       <td>0</td>
-      <td>2</td>
-      <td>0.0283</td>
+      <td>0</td>
+      <td>3.4%</td>
     </tr>
     <tr>
       <th>E. M. Francisco Adolfo de Varnhagen</th>
-      <td>10</td>
+      <td>Iperó-SP</td>
+      <td>12</td>
       <td>0</td>
-      <td>10</td>
-      <td>0.0390</td>
+      <td>8</td>
+      <td>1.3%</td>
     </tr>
     <tr>
       <th>E. M. Pedrina de Campos Pedrozo Rosa</th>
-      <td>14</td>
-      <td>0</td>
-      <td>6</td>
-      <td>0.0607</td>
-    </tr>
-    <tr>
-      <th>E. M. Roque Ayres de Oliveiras</th>
-      <td>15</td>
-      <td>0</td>
-      <td>5</td>
-      <td>0.0073</td>
-    </tr>
-    <tr>
-      <th>E. M. Zilma Thibes Melo</th>
-      <td>22</td>
-      <td>0</td>
-      <td>-2</td>
-      <td>0.0141</td>
-    </tr>
-    <tr>
-      <th>E.M. Dra. Glaucia Aparecida Andrade Nogueira</th>
-      <td>18</td>
-      <td>0</td>
-      <td>2</td>
-      <td>0.0061</td>
-    </tr>
-    <tr>
-      <th>E.M. Elisa Moreira dos Santos</th>
-      <td>18</td>
-      <td>1</td>
-      <td>2</td>
-      <td>0.0584</td>
-    </tr>
-    <tr>
-      <th>E.M. Francisco Munhoz</th>
-      <td>15</td>
-      <td>1</td>
-      <td>5</td>
-      <td>0.0375</td>
-    </tr>
-    <tr>
-      <th>E.M. Franciso Mariano</th>
-      <td>19</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0.0216</td>
-    </tr>
-    <tr>
-      <th>E.M. Henory de Campos Goes</th>
-      <td>3</td>
-      <td>2</td>
-      <td>17</td>
-      <td>0.2140</td>
-    </tr>
-    <tr>
-      <th>E.M. Joaquim Salvador</th>
-      <td>18</td>
-      <td>2</td>
-      <td>2</td>
-      <td>0.1025</td>
-    </tr>
-    <tr>
-      <th>E.M. Marcilio Leite- Turma A</th>
-      <td>13</td>
-      <td>2</td>
-      <td>7</td>
-      <td>0.0547</td>
-    </tr>
-    <tr>
-      <th>E.M. Marcilio Leite- Turma B</th>
-      <td>14</td>
-      <td>1</td>
-      <td>6</td>
-      <td>0.0760</td>
-    </tr>
-    <tr>
-      <th>E.M. Ricardo Pucetti</th>
-      <td>19</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0.0021</td>
-    </tr>
-    <tr>
-      <th>EE Coronel Castanho de Almeida</th>
-      <td>13</td>
-      <td>0</td>
-      <td>7</td>
-      <td>0.0300</td>
-    </tr>
-    <tr>
-      <th>EE Prof. Antonio Tonon - Turma A</th>
-      <td>19</td>
-      <td>0</td>
-      <td>1</td>
-      <td>0.0237</td>
-    </tr>
-    <tr>
-      <th>EM Carmen Lucia Blanco Britto</th>
-      <td>12</td>
-      <td>1</td>
-      <td>8</td>
-      <td>0.0554</td>
-    </tr>
-    <tr>
-      <th>EM Henory de Campos Goes</th>
-      <td>5</td>
-      <td>0</td>
-      <td>15</td>
-      <td>0.0160</td>
-    </tr>
-    <tr>
-      <th>EMEF Barão de Piratininga - Turma A</th>
-      <td>20</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.0135</td>
-    </tr>
-    <tr>
-      <th>EMEF Barão de Piratininga - Turma B</th>
-      <td>23</td>
-      <td>0</td>
-      <td>-3</td>
-      <td>0.0204</td>
-    </tr>
-    <tr>
-      <th>EMEF Dr. Rabindranath Tagore dos S. Pires</th>
-      <td>13</td>
-      <td>0</td>
-      <td>7</td>
-      <td>0.0077</td>
-    </tr>
-    <tr>
-      <th>EMEF Leonidas Antonio de Moreas Professor</th>
-      <td>20</td>
-      <td>1</td>
-      <td>0</td>
-      <td>0.0390</td>
-    </tr>
-    <tr>
-      <th>EMEF Prof. Darcy Amáncio</th>
-      <td>19</td>
-      <td>2</td>
-      <td>1</td>
-      <td>0.0862</td>
-    </tr>
-    <tr>
-      <th>EMEF Prof. Euclides de Oliveira</th>
-      <td>18</td>
-      <td>0</td>
-      <td>2</td>
-      <td>0.0061</td>
-    </tr>
-    <tr>
-      <th>EMEF Prof. Joao Alcindo Vieira</th>
-      <td>20</td>
-      <td>4</td>
-      <td>0</td>
-      <td>0.0967</td>
-    </tr>
-    <tr>
-      <th>EMEF Prof. Joaquim Silveira Santos</th>
-      <td>12</td>
-      <td>2</td>
-      <td>8</td>
-      <td>0.1507</td>
-    </tr>
-    <tr>
-      <th>EMEF Prof. Tiberio Justo da Silva</th>
-      <td>20</td>
-      <td>0</td>
-      <td>0</td>
-      <td>0.0080</td>
-    </tr>
-    <tr>
-      <th>EMEF Prof. Wilson Paschoal</th>
-      <td>18</td>
-      <td>0</td>
-      <td>2</td>
-      <td>0.0117</td>
-    </tr>
-    <tr>
-      <th>EMEF Profa. Maria de Lourdes Pedroso Perin</th>
-      <td>14</td>
-      <td>6</td>
-      <td>6</td>
-      <td>0.1510</td>
-    </tr>
-    <tr>
-      <th>EMEF Professor Antonio Cavaglieri</th>
+      <td>Iperó-SP</td>
       <td>16</td>
       <td>0</td>
       <td>4</td>
-      <td>0.0075</td>
+      <td>1.9%</td>
+    </tr>
+    <tr>
+      <th>E. M. Roque Ayres de Oliveiras</th>
+      <td>Iperó-SP</td>
+      <td>17</td>
+      <td>0</td>
+      <td>3</td>
+      <td>0.4%</td>
+    </tr>
+    <tr>
+      <th>E. M. Zilma Thibes Melo</th>
+      <td>Iperó-SP</td>
+      <td>24</td>
+      <td>0</td>
+      <td>-4</td>
+      <td>0.7%</td>
+    </tr>
+    <tr>
+      <th>E.M. Dra. Glaucia Aparecida Andrade Nogueira</th>
+      <td>Iperó-SP</td>
+      <td>20</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1.1%</td>
+    </tr>
+    <tr>
+      <th>E.M. Elisa Moreira dos Santos</th>
+      <td>Iperó-SP</td>
+      <td>20</td>
+      <td>1</td>
+      <td>0</td>
+      <td>4.0%</td>
+    </tr>
+    <tr>
+      <th>E.M. Francisco Munhoz</th>
+      <td>Capela do Alto-SP</td>
+      <td>16</td>
+      <td>1</td>
+      <td>4</td>
+      <td>6.7%</td>
+    </tr>
+    <tr>
+      <th>E.M. Franciso Mariano</th>
+      <td>Capela do Alto-SP</td>
+      <td>21</td>
+      <td>0</td>
+      <td>-1</td>
+      <td>2.1%</td>
+    </tr>
+    <tr>
+      <th>E.M. Henory de Campos Goes</th>
+      <td>Iperó-SP</td>
+      <td>5</td>
+      <td>2</td>
+      <td>15</td>
+      <td>23.0%</td>
+    </tr>
+    <tr>
+      <th>E.M. Joaquim Salvador</th>
+      <td>Capela do Alto-SP</td>
+      <td>20</td>
+      <td>2</td>
+      <td>0</td>
+      <td>9.2%</td>
+    </tr>
+    <tr>
+      <th>E.M. Marcilio Leite- Turma A</th>
+      <td>Capela do Alto-SP</td>
+      <td>14</td>
+      <td>2</td>
+      <td>6</td>
+      <td>10.2%</td>
+    </tr>
+    <tr>
+      <th>E.M. Marcilio Leite- Turma B</th>
+      <td>Capela do Alto-SP</td>
+      <td>16</td>
+      <td>1</td>
+      <td>4</td>
+      <td>5.8%</td>
+    </tr>
+    <tr>
+      <th>E.M. Ricardo Pucetti</th>
+      <td>Capela do Alto-SP</td>
+      <td>21</td>
+      <td>0</td>
+      <td>-1</td>
+      <td>1.7%</td>
+    </tr>
+    <tr>
+      <th>EE Coronel Castanho de Almeida</th>
+      <td>Guareí-SP</td>
+      <td>15</td>
+      <td>0</td>
+      <td>5</td>
+      <td>1.6%</td>
+    </tr>
+    <tr>
+      <th>EE Prof. Antonio Tonon - Turma A</th>
+      <td>Coronel Macedo-SP</td>
+      <td>21</td>
+      <td>0</td>
+      <td>-1</td>
+      <td>2.9%</td>
+    </tr>
+    <tr>
+      <th>EE Prof. Antonio Tonon - Turma B</th>
+      <td>Coronel Macedo-SP</td>
+      <td>22</td>
+      <td>0</td>
+      <td>-2</td>
+      <td>1.8%</td>
+    </tr>
+    <tr>
+      <th>EM Carmen Lucia Blanco Britto</th>
+      <td>São Roque-SP</td>
+      <td>14</td>
+      <td>1</td>
+      <td>6</td>
+      <td>5.7%</td>
+    </tr>
+    <tr>
+      <th>EM Henory de Campos Goes</th>
+      <td>Iperó-SP</td>
+      <td>7</td>
+      <td>0</td>
+      <td>13</td>
+      <td>2.4%</td>
+    </tr>
+    <tr>
+      <th>EMEF Barão de Piratininga - Turma A</th>
+      <td>São Roque-SP</td>
+      <td>22</td>
+      <td>0</td>
+      <td>-2</td>
+      <td>1.4%</td>
+    </tr>
+    <tr>
+      <th>EMEF Barão de Piratininga - Turma B</th>
+      <td>São Roque-SP</td>
+      <td>25</td>
+      <td>0</td>
+      <td>-5</td>
+      <td>1.8%</td>
+    </tr>
+    <tr>
+      <th>EMEF Dr. Rabindranath Tagore dos S. Pires</th>
+      <td>São Roque-SP</td>
+      <td>15</td>
+      <td>0</td>
+      <td>5</td>
+      <td>0.8%</td>
+    </tr>
+    <tr>
+      <th>EMEF Leonidas Antonio de Moreas Professor</th>
+      <td>São Roque-SP</td>
+      <td>22</td>
+      <td>1</td>
+      <td>-2</td>
+      <td>4.4%</td>
+    </tr>
+    <tr>
+      <th>EMEF Prof. Darcy Amáncio</th>
+      <td>Mirassol-SP</td>
+      <td>21</td>
+      <td>2</td>
+      <td>-1</td>
+      <td>4.0%</td>
+    </tr>
+    <tr>
+      <th>EMEF Prof. Euclides de Oliveira</th>
+      <td>São Roque-SP</td>
+      <td>20</td>
+      <td>0</td>
+      <td>0</td>
+      <td>1.2%</td>
+    </tr>
+    <tr>
+      <th>EMEF Prof. Joao Alcindo Vieira</th>
+      <td>Guareí-SP</td>
+      <td>22</td>
+      <td>4</td>
+      <td>-2</td>
+      <td>4.9%</td>
+    </tr>
+    <tr>
+      <th>EMEF Prof. Joaquim Silveira Santos</th>
+      <td>São Roque-SP</td>
+      <td>14</td>
+      <td>2</td>
+      <td>6</td>
+      <td>12.6%</td>
+    </tr>
+    <tr>
+      <th>EMEF Prof. Tiberio Justo da Silva</th>
+      <td>São Roque-SP</td>
+      <td>22</td>
+      <td>0</td>
+      <td>-2</td>
+      <td>1.3%</td>
+    </tr>
+    <tr>
+      <th>EMEF Prof. Wilson Paschoal</th>
+      <td>Mirassol-SP</td>
+      <td>20</td>
+      <td>0</td>
+      <td>0</td>
+      <td>0.9%</td>
+    </tr>
+    <tr>
+      <th>EMEF Profa. Maria de Lourdes Pedroso Perin</th>
+      <td>Corumbataí-SP</td>
+      <td>16</td>
+      <td>6</td>
+      <td>4</td>
+      <td>14.5%</td>
+    </tr>
+    <tr>
+      <th>EMEF Professor Antonio Cavaglieri</th>
+      <td>São Roque-SP</td>
+      <td>18</td>
+      <td>0</td>
+      <td>2</td>
+      <td>1.1%</td>
     </tr>
     <tr>
       <th>EMEF Sonia Maria Abreu Ghilardi</th>
-      <td>11</td>
-      <td>0</td>
-      <td>9</td>
-      <td>0.0191</td>
-    </tr>
-    <tr>
-      <th>EMEF Tetsu Chinone</th>
+      <td>São Roque-SP</td>
       <td>13</td>
       <td>0</td>
       <td>7</td>
-      <td>0.0292</td>
+      <td>1.5%</td>
+    </tr>
+    <tr>
+      <th>EMEF Tetsu Chinone</th>
+      <td>São Roque-SP</td>
+      <td>15</td>
+      <td>0</td>
+      <td>5</td>
+      <td>3.1%</td>
     </tr>
   </tbody>
 </table></section>
@@ -342,59 +387,59 @@
   <tbody>
     <tr>
       <th>Capela do Alto-SP</th>
-      <td>98</td>
+      <td>108</td>
       <td>6</td>
-      <td>22</td>
-      <td>0.0487</td>
+      <td>12</td>
+      <td>5.8%</td>
     </tr>
     <tr>
       <th>Coronel Macedo-SP</th>
-      <td>19</td>
+      <td>43</td>
       <td>0</td>
-      <td>1</td>
-      <td>0.0237</td>
+      <td>-3</td>
+      <td>2.4%</td>
     </tr>
     <tr>
       <th>Corumbataí-SP</th>
-      <td>14</td>
+      <td>16</td>
       <td>6</td>
-      <td>6</td>
-      <td>0.1510</td>
+      <td>4</td>
+      <td>14.5%</td>
     </tr>
     <tr>
       <th>Guareí-SP</th>
-      <td>33</td>
+      <td>37</td>
       <td>4</td>
-      <td>7</td>
-      <td>0.0732</td>
+      <td>3</td>
+      <td>3.7%</td>
     </tr>
     <tr>
       <th>Iperó-SP</th>
-      <td>105</td>
+      <td>121</td>
       <td>3</td>
-      <td>55</td>
-      <td>0.0373</td>
+      <td>39</td>
+      <td>2.9%</td>
     </tr>
     <tr>
       <th>Mirassol-SP</th>
-      <td>37</td>
+      <td>41</td>
       <td>2</td>
-      <td>3</td>
-      <td>0.0518</td>
+      <td>-1</td>
+      <td>2.6%</td>
     </tr>
     <tr>
       <th>Salto-SP</th>
-      <td>62</td>
+      <td>70</td>
       <td>3</td>
-      <td>18</td>
-      <td>0.0480</td>
+      <td>10</td>
+      <td>4.3%</td>
     </tr>
     <tr>
       <th>São Roque-SP</th>
-      <td>178</td>
+      <td>200</td>
       <td>4</td>
-      <td>42</td>
-      <td>0.0301</td>
+      <td>20</td>
+      <td>3.0%</td>
     </tr>
   </tbody>
 </table></section>
@@ -418,87 +463,87 @@
   <tbody>
     <tr>
       <th>Ana Clara Ferrari</th>
-      <td>63</td>
+      <td>71</td>
       <td>1</td>
-      <td>17</td>
-      <td>0.0170</td>
+      <td>9</td>
+      <td>2.1%</td>
     </tr>
     <tr>
       <th>Emilly Vitoria Alves Ribeiro</th>
-      <td>62</td>
+      <td>72</td>
       <td>3</td>
-      <td>38</td>
-      <td>0.0526</td>
+      <td>28</td>
+      <td>4.1%</td>
     </tr>
     <tr>
       <th>Gustavo Eduardo Cardoso</th>
-      <td>19</td>
+      <td>43</td>
       <td>0</td>
-      <td>1</td>
-      <td>0.0237</td>
+      <td>-3</td>
+      <td>2.4%</td>
     </tr>
     <tr>
       <th>Jamilli Veloso de Souza</th>
-      <td>43</td>
+      <td>49</td>
       <td>0</td>
-      <td>17</td>
-      <td>0.0142</td>
+      <td>11</td>
+      <td>0.9%</td>
     </tr>
     <tr>
       <th>Jose (Vinicius Lima Cardozo)</th>
-      <td>33</td>
+      <td>37</td>
       <td>4</td>
-      <td>7</td>
-      <td>0.0732</td>
+      <td>3</td>
+      <td>3.7%</td>
     </tr>
     <tr>
       <th>Julia Fernanda de Camargo Teles Miranda</th>
-      <td>51</td>
+      <td>56</td>
       <td>2</td>
-      <td>9</td>
-      <td>0.0240</td>
+      <td>4</td>
+      <td>4.2%</td>
     </tr>
     <tr>
       <th>Lívia Kormann</th>
-      <td>62</td>
+      <td>70</td>
       <td>3</td>
-      <td>18</td>
-      <td>0.0480</td>
+      <td>10</td>
+      <td>4.3%</td>
     </tr>
     <tr>
       <th>Mirela Silva Gondim Garcia</th>
-      <td>74</td>
+      <td>82</td>
       <td>1</td>
-      <td>6</td>
-      <td>0.0236</td>
+      <td>-2</td>
+      <td>2.4%</td>
     </tr>
     <tr>
       <th>Paulo Miranda</th>
-      <td>47</td>
+      <td>52</td>
       <td>4</td>
-      <td>13</td>
-      <td>0.0743</td>
+      <td>8</td>
+      <td>7.4%</td>
     </tr>
     <tr>
       <th>Pedro Henrique Prado Alves</th>
-      <td>14</td>
+      <td>16</td>
       <td>6</td>
-      <td>6</td>
-      <td>0.1510</td>
+      <td>4</td>
+      <td>14.5%</td>
     </tr>
     <tr>
       <th>Synara Sajonetti Maistrello</th>
-      <td>37</td>
+      <td>41</td>
       <td>2</td>
-      <td>3</td>
-      <td>0.0518</td>
+      <td>-1</td>
+      <td>2.6%</td>
     </tr>
     <tr>
       <th>Vittoria Christina Santos Rocha</th>
-      <td>41</td>
+      <td>47</td>
       <td>2</td>
-      <td>19</td>
-      <td>0.0607</td>
+      <td>13</td>
+      <td>5.5%</td>
     </tr>
   </tbody>
 </table></section>
@@ -513,71 +558,71 @@
   </thead>
   <tbody>
     <tr>
-      <td>Leo</td>
-      <td>E. M. Pedrina de Campos Pedrozo Rosa</td>
-      <td>Iperó-SP</td>
-      <td>0.34</td>
+      <td>observações</td>
+      <td>EMEF Prof. Joaquim Silveira Santos</td>
+      <td>São Roque-SP</td>
+      <td>0.270381</td>
     </tr>
     <tr>
-      <td>Christyan Araújo de moura</td>
-      <td>E. M. Francisco Adolfo de Varnhagen</td>
-      <td>Iperó-SP</td>
-      <td>0.29</td>
+      <td>data</td>
+      <td>EMEF Prof. Joaquim Silveira Santos</td>
+      <td>São Roque-SP</td>
+      <td>0.270381</td>
     </tr>
     <tr>
-      <td>Lorena Margoni Zati</td>
-      <td>EMEF Prof. Darcy Amáncio</td>
-      <td>Mirassol-SP</td>
-      <td>0.28</td>
-    </tr>
-    <tr>
-      <td>Felipe</td>
-      <td>E. M. Pedrina de Campos Pedrozo Rosa</td>
-      <td>Iperó-SP</td>
-      <td>0.22</td>
-    </tr>
-    <tr>
-      <td>JENNIFER VITÓRIA DA SILVA</td>
+      <td>jennifer vitória da silva</td>
       <td>E.M. Joaquim Salvador</td>
       <td>Capela do Alto-SP</td>
-      <td>0.22</td>
+      <td>0.250000</td>
     </tr>
     <tr>
-      <td>Miguel Domingos Ferreira</td>
-      <td>EMEF Barão de Piratininga - Turma B</td>
+      <td>jennifer luzia da silva lima</td>
+      <td>EMEF Tetsu Chinone</td>
       <td>São Roque-SP</td>
-      <td>0.21</td>
+      <td>0.240000</td>
     </tr>
     <tr>
-      <td>BRYAN CANDIDO RODRIGUÊS</td>
-      <td>E.M. Henory de Campos Goes</td>
-      <td>Iperó-SP</td>
-      <td>0.21</td>
-    </tr>
-    <tr>
-      <td>YANE CELINA SIMÃO</td>
-      <td>EE Prof. Antonio Tonon - Turma A</td>
-      <td>Coronel Macedo-SP</td>
-      <td>0.19</td>
-    </tr>
-    <tr>
-      <td>Aline da Silva de Lima</td>
-      <td>CEMUS1 - Turma B</td>
-      <td>Salto-SP</td>
-      <td>0.18</td>
-    </tr>
-    <tr>
-      <td>BEATRIZ MACHADO SOARES</td>
+      <td>beatriz machado soares</td>
       <td>E.M. Marcilio Leite- Turma B</td>
       <td>Capela do Alto-SP</td>
-      <td>0.18</td>
+      <td>0.220000</td>
+    </tr>
+    <tr>
+      <td>leonardo alves de oliveira</td>
+      <td>CEMUS5 - Turma B</td>
+      <td>Salto-SP</td>
+      <td>0.200000</td>
+    </tr>
+    <tr>
+      <td>anabelle camargo de sampaio</td>
+      <td>E.M. Marcilio Leite- Turma B</td>
+      <td>Capela do Alto-SP</td>
+      <td>0.190000</td>
+    </tr>
+    <tr>
+      <td>lucas vieira</td>
+      <td>E.M. Franciso Mariano</td>
+      <td>Capela do Alto-SP</td>
+      <td>0.170000</td>
+    </tr>
+    <tr>
+      <td>reivisson da silva bonifácio</td>
+      <td>E.M. Henory de Campos Goes</td>
+      <td>Iperó-SP</td>
+      <td>0.160000</td>
+    </tr>
+    <tr>
+      <td>gabriely moura de moraes</td>
+      <td>E.M. Ricardo Pucetti</td>
+      <td>Capela do Alto-SP</td>
+      <td>0.160000</td>
     </tr>
   </tbody>
 </table></section>
     <section id="grafico_top_alunos"><h2>📊 Gráfico: Top Alunos</h2><iframe src="grafico_top_alunos.html"></iframe></section>
     <section id="grafico_risco_cidade"><h2>⚠️ Risco por Cidade</h2><iframe src="grafico_risco_cidade.html"></iframe></section>
     <section id="grafico_evasao_cidade"><h2>🏙️ Evasão por Cidade</h2><iframe src="grafico_evasao_cidade.html"></iframe></section>
-    <section id="grafico_evasao_turma"><h2>🏫 Evasão por Turma</h2><iframe src="grafico_evasao_turma.html"></iframe></section>
+    <section id="grafico_evasao_turma"><h2>🏫 Quantidade por Turma</h2><iframe src="grafico_evasao_turma.html"></iframe></section>
 
     <script>
         $(document).ready(function () {
